Added ramen section

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <div class="menu-title">
           <h3>Menu</h3>
         </div>
-        <div class="tsukemono">
+        <div class="menu-container tsukemono">
           <h3>Tsukemono</h3>
-          <div class="menu-container">
+          <div class="menu-items-list">
             <div class="menu-item">
               <div class="item-info">
                 <h4 class="item-info-name">Goma Gari</h4>
@@ -84,7 +84,7 @@
                 </p>
               </div>
 
-              <img src="/img/tsukemono/kitsune.png" alt="goma gari na tależu" />
+              <img src="/img/tsukemono/kitsune.png" alt="kitsune" />
             </div>
             <div class="menu-item">
               <div class="item-info">
@@ -95,15 +95,126 @@
                   syczuańskim i kolendrą.
                 </p>
               </div>
-              <img
-                src="/img/tsukemono/non-gluten.png"
-                alt="goma gari na tależu"
-              />
+              <img src="/img/tsukemono/non-gluten.png" alt="pikle" />
             </div>
           </div>
         </div>
-        <div class="ramen"></div>
-        <div class="drinks"></div>
+        <div class="menu-container ramen">
+          <h3>Ramen</h3>
+          <div class="menu-items-list">
+            <div class="menu-item">
+              <div class="item-info">
+                <h4 class="item-info-name">Red Alert Tantan</h4>
+                <p class="item-info-price">53,00 zł</p>
+                <p class="item-info-ingr">
+                  Tare: peanut butter tantan. Makaron alkaliczny, bulion,
+                  pikantna, mielona wołowina, kapusta pekińska w sosie
+                  ostrygowym, chutney z czerwonej cebulki, orzechy nerkowca,
+                  jajko, opalane nori, olej rayu, togarashi.
+                </p>
+              </div>
+              <img
+                src="/img/ramen/red-alert-tantan.png"
+                alt="Red Alert Tantan ramen"
+              />
+            </div>
+            <div class="menu-item">
+              <div class="item-info">
+                <h4 class="item-info-name">Akita</h4>
+                <p class="item-info-price">51,00 zł</p>
+                <p class="item-info-ingr">
+                  Tare: shoyu. Makaron alkaliczny, bulion, szarpana łopatka,
+                  kanpyo, wakame, szczypta chilli, sezam, jajko, dymka, opalane
+                  nori.
+                </p>
+              </div>
+              <img src="/img/ramen/akita.png" alt="akita ramen" />
+            </div>
+            <div class="menu-item">
+              <div class="item-info">
+                <h4 class="item-info-name">Akita Spicy Love</h4>
+                <p class="item-info-price">51,00 zł</p>
+                <p class="item-info-ingr">
+                  Tare: shoyu. Makaron alkaliczny, bulion, szarpana łopatka,
+                  kanpyo, wakame, szczypta chilli, sezam, jajko, dymka, opalane
+                  nori.
+                </p>
+              </div>
+
+              <img
+                src="/img/ramen/spicy-love.png"
+                alt="Akita Spicy Love ramen"
+              />
+            </div>
+            <div class="menu-item">
+              <div class="item-info">
+                <h4 class="item-info-name">Mapo Tofu Vegan</h4>
+                <p class="item-info-price">51,00 zł</p>
+                <p class="item-info-ingr">
+                  Tare: vegan tantan. Makaron alkaliczny, opalane nori, bulion,
+                  mapo tofu w pikantnej paście doubanjiang z ziarnami soi,
+                  benishoga, kiełki mung, biała kapusta, sezam, pieprz
+                  syczuański, dymka lub kolendra, olej rayu.
+                </p>
+              </div>
+              <img
+                src="/img/ramen/mapo-tofu-vegan.png"
+                alt="Mapo Tofu Vegan ramen"
+              />
+            </div>
+            <div class="menu-item">
+              <div class="item-info">
+                <h4 class="item-info-name">Tricity Chikin</h4>
+                <p class="item-info-price">51,00 zł</p>
+                <p class="item-info-ingr">
+                  Tare: shoyu. Makaron alkaliczny, opalane nori, bulion,
+                  soczysta pierś z kurczaka w panko, imbir, gari, biała kapusta,
+                  dymka, sezam, jajko. Stopień ostrości do wyboru.
+                </p>
+              </div>
+              <img
+                src="/img/ramen/tricity-chikin.png"
+                alt="Tricity Chikin ramen"
+              />
+            </div>
+            <div class="menu-item">
+              <div class="item-info">
+                <h4 class="item-info-name">Tokyo Old School</h4>
+                <p class="item-info-price">50,00 zł</p>
+                <p class="item-info-ingr">
+                  Tare: shoyu. Makaron alkaliczny, bulion, opalany boczek
+                  Chashu, bambus, palony por, jajko, 2x opalane nori, olej
+                  sezamowy.
+                </p>
+              </div>
+              <img
+                src="/img/ramen/tokyo-old-school.png"
+                alt="Tokyo Old School ramen"
+              />
+            </div>
+            <div class="menu-item">
+              <div class="item-info">
+                <h4 class="item-info-name">Kids</h4>
+                <p class="item-info-price">41,00 zł</p>
+                <p class="item-info-ingr">
+                  Makaron alkaliczny, opalane nori, bulion, kurczak, jajko.
+                </p>
+              </div>
+
+              <img src="/img/ramen/kids.png" alt="Kids ramen" />
+            </div>
+            <div class="menu-item">
+              <div class="item-info">
+                <h4 class="item-info-name">Kids Veggie</h4>
+                <p class="item-info-price">51,00 zł</p>
+                <p class="item-info-ingr">
+                  Makaron alkaliczny, opalane nori, bulion, tofu, wakame.
+                </p>
+              </div>
+              <img src="/img/ramen/kids-veggie.png" alt="Kids Veggie ramen" />
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
