Added drinks section

--- a/index.html
+++ b/index.html
@@ -215,6 +215,83 @@
             </div>
           </div>
         </div>
+        <div class="menu-container drinks">
+          <h3>Napoje</h3>
+          <div class="menu-items-list">
+            <div class="menu-item">
+              <div class="item-info">
+                <h4 class="item-info-name">Lemoniada Domowa</h4>
+                <p class="item-info-price">16,00 zł</p>
+                <p class="item-info-ingr">
+                  Smak do wyboru:
+                  <ul class="item-info-ingr-list">
+                    <li>
+                      Lawendowa
+                    </li>
+                    <li>
+                      Klasyczna
+                    </li>
+                    <li>
+                      Grapefruit-Rozmaryn
+                    </li>
+                    <li>
+                      Mango-Imbir
+                    </li>
+                  </ul>
+                </p>
+              </div>
+              <img
+                src="/img/drinks/lemonade.png"
+                alt="Lemoniada Domowa"
+              />
+            </div>
+            <div class="menu-item">
+              <div class="item-info">
+                <h4 class="item-info-name">Fritz (330 ml)</h4>
+                <p class="item-info-price">17,00 zł</p>
+                <p class="item-info-ingr">
+                  Smak do wyboru:
+                  <ul class="item-info-ingr-list">
+                    <li>
+                      Kola-Pomarańcza
+                    </li>
+                    <li>
+                      Kola Super Zero
+                    </li>
+                    <li>
+                      Kola                  
+                    </li>
+                  </ul>
+                </p>
+              </div>
+              <img
+                src="/img/drinks/fritz.png"
+                alt="Fritz"
+              />
+            </div>
+            <div class="menu-item">
+              <div class="item-info">
+                <h4 class="item-info-name">Woda niegazowana <br> (330 ml)</h4>
+                <p class="item-info-price">9,00 zł</p>
+                <p class="item-info-ingr">
+                  Orzeźwiająca woda niegazowana.
+                </p>
+              </div>
+
+              <img src="/img/drinks/water.png" alt="woda niegazowana w butelce 330 ml" />
+            </div>
+            <div class="menu-item">
+              <div class="item-info">
+                <h4 class="item-info-name">Woda gazowana <br> (330 ml)</h4>
+                <p class="item-info-price">9,00 zł</p>
+                <p class="item-info-ingr">
+                  Orzeźwiająca woda gazowana.
+                </p>
+              </div>
+              <img src="/img/drinks/water.png" alt="woda gazowana w butelce 330 ml" />
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
