Added Contact Section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p>since 2015</p>
       </div>
       <div class="menu" id="menu">
-        <div class="menu-title">
+        <div class="section-title">
           <h3>Menu</h3>
         </div>
         <div class="menu-container tsukemono">
@@ -291,6 +291,20 @@
               <img src="/img/drinks/water.png" alt="woda gazowana w butelce 330 ml" />
             </div>
           </div>
+        </div>
+      </div>
+      <div class="contact" id="contact">
+        <h3 class="section-title">Kontakt</h3>
+        <div class="contact-container">
+          <div class="contact-details">
+            <h4>Adres</h4>
+            <p>Ul. Węgłowa 4, Kraków, Poland</p>
+            <h4>Social Media</h4>
+            <p>Instagram: <a href="https://www.instagram.com/akitaramen" target="_blank">@akitaramen</a></p>
+            <p>Facebook: <a href="https://www.facebook.com/akitadobrenoodle" target="_blank">AkitaRamen</a></p>
+          </div>
+          <div class="map">
+            <iframe iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d905.8072789905632!2d19.94207124434707!3d50.04864626176561!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47165b69be524be5%3A0x58aea0ef000be96!2sAkita%20Ramen!5e0!3m2!1sen!2spl!4v1752273060479!5m2!1sen!2spl"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>          </div>
         </div>
       </div>
     </div>
